# jpr_01

./: .gitignore  README.adoc  README.md  pom.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  tasks-and-meta.md
.github/workflows/: ci.yaml  upload_release.yaml
src/main/c/: JavaPcre.c  Makefile.am  README  configure.ac  pcre2demo.c
src/main/java/com/teragrep/: JavaPcre.java  Main.java  MatchException.java
src/main/java/com/teragrep/jpr_01/: JavaPcre.java  Main.java  MatchException.java
src/main/java/org/teragrep/: JavaPcre.java  Main.java  MatchException.java
src/test/java/com/teragrep/: JavaPcreTest.java
src/test/java/com/teragrep/jpr_01/: JavaPcreIT.java  JavaPcreTest.java  ManualMountDetectionTest.java
src/test/java/org/teragrep/: JavaPcreTest.java
