AC_INIT([linux-x86-64], 1.0)
#AC_CONFIG_MACRO_DIRS([m4])
AM_INIT_AUTOMAKE
LT_INIT
AC_PROG_CC
AC_DEFINE([_POSIX_C_SOURCE], [200809L], [Define the POSIX version])
AC_DEFINE(_BSD_SOURCE)
AC_DEFINE(HAVE_ATOMIC_BUILTINS64)
AC_CHECK_HEADERS
AC_C_INLINE
AC_FUNC_MALLOC
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_UINT8_T
AC_CONFIG_FILES(Makefile)
AC_OUTPUT
